# skyllm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  models.ini  pixi.toml  pyproject.toml  sky-big-llamacpp.yaml  sky-big.yaml  sky-llamacpp.yaml  sky.yaml
caddy/: Caddyfile.placeholder
docs/: alternatives.md  landscape.md  pixi.md  roadmap.md  toc.md
docs/roadmap/: README.md  edge-auth.md  phase-1-pixi.md  phase-2-catalog.md  phase-3-cli.md  phase-4-multi-provider.md  variance-tracker.md
models/qwen-0.5b/: model.yaml
models/qwen3-coder-next/: model.yaml
models/qwen3-coder-next-80gb/: model.yaml
models/qwen3.6-27b/: model.yaml
pod/: pixi.toml
scripts/: budget-check.sh  idle-watch.sh
sky/: sky-big-llamacpp.yaml  sky-big.yaml  sky-llamacpp-80gb.yaml  sky-llamacpp-cpumoe.yaml  sky-llamacpp.yaml  sky.yaml
skyllm/: cli.py  schema.py  validate.py
