[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyllm"
version = "0.1.0"
description = "Launch on-demand cloud LLM endpoints from a model catalog via SkyPilot."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "typer",
    "requests",
    "skypilot[runpod]",
]

# Console entry point. Pixi installs this package editable into the `cli`
# env (see pixi.toml), putting `skyllm` on the env's PATH. Invoke as either
# `pixi run -e cli skyllm ...` or, inside `pixi shell -e cli`, bare `skyllm`.
[project.scripts]
skyllm = "skyllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skyllm"]
